<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".FormConfirmarActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codigoProduto" />

    <TextView
        android:id="@+id/tvCodigoProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantidade" />

    <TextView
        android:id="@+id/tvQuantidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor" />

    <TextView
        android:id="@+id/tvValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />


    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2.5dp"
        android:onClick="btnEnviarOnClick"
        android:text="@string/enviar" />


</LinearLayout>